changed now.json config, again

--- a/now.json
+++ b/now.json
@@ -1,7 +1,4 @@
 {
   "name": "ync-placeholder",
-  "version": 2,
-  "builds": [
-    { "src": "*.html", "use": "@now/static" }
-  ]
+  "version": 2
 }
